# flutter-widgets-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  prompt.md  rustfmt.toml
assets/catalog_seed/: README.md
assets/catalog_seed/widgets/: grid_view.toml  list_view.toml
crates/fwt-app/: Cargo.toml
crates/fwt-app/src/: command.rs  executor.rs  lib.rs  message.rs  navigation.rs  outcome.rs  state.rs
crates/fwt-cli/: Cargo.toml
crates/fwt-cli/src/: logging.rs  main.rs  reset.rs
crates/fwt-cli/tests/: release_build_hides_panic_test.rs  reset_flag.rs  smoke.rs
crates/fwt-domain/: Cargo.toml
crates/fwt-domain/src/: lib.rs  widget.rs
crates/fwt-domain/src/ports/: catalog_repository.rs  mod.rs
crates/fwt-infra/: Cargo.toml
crates/fwt-infra/src/: lib.rs
crates/fwt-infra/src/db/: catalog_repo.rs  migrations.rs  mod.rs
crates/fwt-infra/tests/: catalog_db_tests.rs  catalog_repo_test.rs
crates/fwt-tui/: Cargo.toml
crates/fwt-tui/src/: app.rs  lib.rs  panic_hook.rs  terminal.rs
crates/fwt-tui/src/theme/: mod.rs
crates/fwt-tui/src/widgets/: app_shell.rs
docs/: TRD.md
docs/adr/: adr-000-workspace-structure.md  adr-001-terminal-lifecycle-and-panic-hook-ordering.md
docs/epics/epic-01/: epic-01-core-tui.md  ticket-001-project-scaffold.md  ticket-002-terminal-lifecycle-and-panic-safety.md  ticket-003-async-runtime-and-event-loop.md  ticket-004-app-state-and-update-loop.md  ticket-005-base-app-shell-layout.md
docs/epics/epic-02/: epic-02-catalog-and-search.md  ticket-004-catalog-schema.md  ticket-005-catalog-repository.md  ticket-006-search-spike-and-engine.md  ticket-007-search-ui.md
migrations/catalog/: README.md  V1__initial_schema.sql
migrations/user/: README.md
tests/integration/: README.md  panic_safety.rs
tests/snapshots/: README.md
tool/catalog_extractor/: .gitignore  README.md  catalog_data.json  pubspec.yaml
tool/catalog_extractor/lib/: catalog_extractor.dart
tool/catalog_extractor/lib/src/: analyzer_session.dart  doc_comment_parser.dart  extractor.dart  json_writer.dart  member_extractor.dart  model.dart  widget_filter.dart
xtask/: Cargo.toml
xtask/src/: main.rs  migrations.rs  seed_catalog.rs
