[workspace]
resolver = "2"
members = [
    "crates/fwt-app",
    "crates/fwt-cli",
    "crates/fwt-domain",
    "crates/fwt-infra",
    "crates/fwt-tui",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["David Michael II"]
license = "MIT"
publish = false

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.23.4", features = ["v4"] }
