[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
anyhow = "1.0.103"
cargo_metadata = "0.23.1"
clap = { workspace = true }
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
toml = "1.1.3"
tempfile = "3.26.0"
