[package]
name = "fwt-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
crossterm = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
tokio = { workspace = true, features = ["test-util"] }
