[package]
name = "fwt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fwt"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
color-eyre = "0.6.5"
fwt-app = { path = "../fwt-app" }
fwt-domain = { path = "../fwt-domain" }
fwt-infra = { path = "../fwt-infra" }
fwt-tui = { path = "../fwt-tui" }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
directories = "6.0.0"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"