[package]
name = "fwt-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = "0.1.89"
fwt-domain = { path = "../fwt-domain" }
r2d2 = "0.8.10"
r2d2_sqlite = "0.35.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
rusqlite_migration = "2.6.0"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.26.0"
pretty_assertions = "1.4.1"
