[package]
name = "fwt-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
crossterm = { workspace = true, features = ["event-stream"] }
futures-util = { workspace = true }
fwt-app = { path = "../fwt-app" }
ratatui = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }